--- a/Diyadoor Web/Diyadoor Web.csproj
+++ b/Diyadoor Web/Diyadoor Web.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="AboutUs.css" />
     <Content Include="Contact.aspx" />
     <Content Include="AboutUs.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -133,6 +134,7 @@
     <Content Include="MainPage.css" />
     <Content Include="MainPage.aspx" />
     <Content Include="Products.aspx" />
+    <Content Include="Products.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
