--- a/Diyadoor Web/Diyadoor Web.csproj
+++ b/Diyadoor Web/Diyadoor Web.csproj
@@ -322,7 +322,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>52027</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:52027/</IISUrl>
+          <IISUrl>http://localhost:52027/MainPage</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:52027/MainPage</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
