Publish on cloud

--- a/Diyadoor Web/Diyadoor Web.csproj
+++ b/Diyadoor Web/Diyadoor Web.csproj
@@ -127,7 +127,7 @@
     <Content Include="Image\Cover-2.jpg" />
     <Content Include="Image\Cover-3.jpg" />
     <Content Include="Image\Cover-4.jpg" />
-    <Content Include="Default.aspx" />
+    <Content Include="111.aspx" />
     <Content Include="Image\DiYaLogo.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -146,7 +146,7 @@
     <Content Include="Image\P-River-4.jpg" />
     <Content Include="Image\shebei.jpg" />
     <Content Include="MainPage.css" />
-    <Content Include="MainPage.aspx" />
+    <Content Include="Default.aspx" />
     <Content Include="Products.aspx" />
     <Content Include="Products.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -171,6 +171,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <None Include="Properties\PublishProfiles\Diyadoor - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\DiyadoorWeb - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -230,22 +231,22 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="111.aspx.cs">
+      <DependentUpon>111.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="111.aspx.designer.cs">
+      <DependentUpon>111.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="MainPage.aspx.cs">
-      <DependentUpon>MainPage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="MainPage.aspx.designer.cs">
-      <DependentUpon>MainPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Products.aspx.cs">
       <DependentUpon>Products.aspx</DependentUpon>
